# ChatApplication

./: CMakeLists.txt
cli/: cli.cpp  cli_client.cpp  cli_server.cpp
include/: client.hpp  i_client.hpp  server.hpp  tcp_client.hpp  tcp_server.hpp  thread_manager.hpp
source/: client.cpp  server.cpp  tcp_client.cpp  tcp_server.cpp  thread_manager.cpp
